# Gem

./: .gitignore  Ideas.md  README.md  compile_antlr4.bat  main.py  mypy.ini
examples/: test.gem  test.ll
gem/: Gem.g4  __init__.py  arg_parser.py  c_parser.py  c_registry.py  codegen_utils.py  ir.py  ir_builder.py  lib.py  target.py
gem/cruntime/: asprintf.c
gem/parser/: Gem.interp  GemLexer.interp  GemLexer.py  GemLexer.tokens  GemParser.py  GemVisitor.py  __init__.py
gem/passes/: __init__.py  analyser.py  code_generation.py  generics_resolver.py  memory_manager.py  (+2 more)
testing/GLFW_OpenGL/: CMakeLists.txt  main.c
testing/GLFW_OpenGL/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
testing/GLFW_OpenGL/glfw/docs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
testing/GLFW_OpenGL/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
testing/GLFW_OpenGL/glfw/src/Debug/: glfw3.lib
testing/GLFW_OpenGL/glfw/src/glfw.dir/Debug/: glfw3.lib.recipe
testing/GLFW_OpenGL/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
testing/raygui/: CMakeLists.txt  main.c
(+27 files in other folders)
